Fixed layout problems with IE8 and IE9. Fixed small bugs. First beta release is online under www.kupkb.org

--- a/site/css/kupkb.css
+++ b/site/css/kupkb.css
@@ -114,6 +114,14 @@ a.toggler:hover
 	font-weight: bold;
 }
 
+.titleTable
+{
+	position: relative;
+	left: -60px;
+	top: -40px;
+	border: none;
+}
+
 .innerTable
 {
 	width: 100%;
@@ -156,6 +164,7 @@ a.toggler:hover
 	padding-bottom: 4px;
     vertical-align: middle;
     text-align: left;
+    height: 25px;
     /*border-width: 1px;
     border-style: dashed;*/
 }
@@ -168,6 +177,7 @@ a.toggler:hover
     vertical-align: middle;
     text-align: left;
     font-size: 0.9em;
+    height: 25px;
     /*border-width: 1px;
     border-style: dashed;*/
 }
@@ -355,7 +365,8 @@ a.toggler:hover
 #cytoscapeweb 
 { 
 	width: 100%;
-	height: 100%;
+	height: 600px;
+	/*height: 100%;*/
 	text-align: center;
 	vertical-align: middle;
 }
@@ -393,6 +404,7 @@ a.toggler:hover
 	height: 100%;
 	z-index: 999;
 	opacity: 0.9;
+	filter: alpha(opacity = 90);
 	overflow: auto;
 	border-style: dashed;
 	border-color: #000000;
